compiler/tests/fa/errors/print_parens.salam
// انتظار: آرگومان‌های چاپ
// زبان: فارسی
تابع اصلی:
    چاپ ("سن سارا:", 2 + 3)
تمام
